--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm install;",
+    "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "concurrently": "^3.6.0",
+    "nodemon": "^1.17.5"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -24,5 +25,13 @@
     "express": "^4.15.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kglibrarian/nytrepository.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kglibrarian/nytrepository/issues"
+  },
+  "homepage": "https://github.com/kglibrarian/nytrepository#readme"
 }
