--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -22,6 +21,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17"
